Upgrade to Vaadin 25.1.1